--- a/playground/index.html
+++ b/playground/index.html
@@ -15,7 +15,8 @@ svg.stacked-radial {
   font-size: 10px;
 }
 svg.stacked-radial path.layer {
-  stroke: none;
+  stroke: #fff;
+  stroke-width: 1;
 }
 svg.stacked-radial .axis line {
   stroke: #000;
