--- a/index.html
+++ b/index.html
@@ -307,4 +307,14 @@ d3.csv('data.csv', function(data) {
   ]
 });</script><script src="lib/d3.v3.min.js"></script><script>var code = '<svg width="400" height="300">\n  <circle cx="50" cy="100" r="200" fill="steelblue" />\n  <circle cx="300" cy="200" r="150" fill="white"\n    stroke="steelblue" stroke-width="5" fill-opacity=".5" />\n</svg>'
 d3.select('code#svg-code')
-  .text(code);</script></body></html>
+  .text(code);
+  
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-33401065-3']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();</script></body></html>
